[package]
name = "dchat"
version = "0.4.2"
homepage = "https://dark.fi"
description = "Demo chat app used to document DarkFi networking code"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://github.com/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

# ANCHOR: darkfi
[dependencies]
darkfi = {path = "../../", features = ["net", "rpc"]}
darkfi-serial = {path = "../../src/serial"}
# ANCHOR_END: darkfi

# ANCHOR: dependencies
async-trait = "0.1.74"
easy-parallel = "3.3.1"
smol = "1.3.0"
log = "0.4.20"
simplelog = "0.12.1"
url = "2.4.1"
toml = "0.8.8"
# ANCHOR_END: dependencies
